# discrete_normalizing_flow_text8

./: .gitignore  README.md  config.yaml  data.py  mila_train.sh  model.py  pyproject.toml  tarflow_single_system.py  train.py  train_generator.py
configs/: config.yaml
configs/experiment/: train_encoder.yaml  train_generator.yaml
configs/model/: bert_generator.yaml  nf_encoder.yaml
configs/trainer/: default.yaml
sh/dcc/: train.sh
sh/mila/: launch.sh  train.sh  train_encoder.sh  train_generator.sh  train_long.sh
sh/mila/scripts/: encoder.sh  generator.sh
sh/mila/slurm/: h100.sbatch  l40s.sbatch
src/: __init__.py
src/lightning/: __init__.py  encoder_training.py  generator_training.py
src/models/: __init__.py  components.py  generator.py  nf_encoder.py
